Bug 453926 - Require that screens are touching
Summary: Require that screens are touching
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: 5.24.5
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: David Redondo
URL:
Keywords:
: 392152 392153 422073 459745 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-17 08:32 UTC by srgames
Modified: 2022-11-21 09:51 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
picture showing where the invisible border on the main screen is beginning (12.02 KB, image/png)
2022-05-17 08:32 UTC, srgames
Details

Note You need to log in before you can comment on or make changes to this bug.
Description srgames 2022-05-17 08:32:24 UTC
Created attachment 148909 [details]
picture showing where the invisible border on the main screen is beginning

SUMMARY

The secondary monitors top is at a lower point than my main monitor. In my case it's creating an invisible border I can't cross with f.e. the "League of Legends" launcher. As shown in the attached picture, the border I cannot cross begins where the arrow is pointing, exactly where the secondary monitors top is positioned.

I'm using plasma-wayland on a radeon rx 6700 xt with mesa drivers
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2022-05-17 15:35:09 UTC
Yeah, when the screens aren't exactly touching in the config UI, you can't move your cursor between them. I don't think this is a good design; a gap between screens shouldn't prevent any screens from being inaccessible with the cursor. Or, if that's not the intended design, it's a bad bug. :)
Comment 2 Aleix Pol 2022-05-17 16:59:18 UTC
This is in part a symptom of https://invent.kde.org/plasma/kscreen/-/commit/cc832fd4296440fcd9298cb03b0cc736a99ed8bb.

That's not to say this is not a problem, I am not sure what the right solution here is, besides making floating screens never the case.
Comment 3 Nate Graham 2022-05-17 17:01:56 UTC
For non-touching screens, could we internally make an invisible area that the cursor can go on that bridges them together?
Comment 4 srgames 2022-05-18 03:50:52 UTC
I think I have to clarify, sorry. It's my first bug report. :D

The border from right screen to left left screen is "normal" for me as this was the same when I was still using Windows. The border on the main screen in this case though prevents me from moving the window (on the right main screen) above the point where the second screen "docks" on the left side, even though there is enough space. With the mentioned launcher there is a hard border I can't cross dragging the launcher further up, it stops right there (where the secondary left monitors top is "docked").

Other windows have a similar behavior, but a "soft" version of it. There is a noticeable, invisible border dragging them over the point upwards (and also back down) but they kind of "clamp" on it for a short time and then jump over it. This is also annoying but at least I can get over the point.
Comment 5 Vlad Zahorodnii 2022-09-14 10:09:32 UTC
(In reply to Nate Graham from comment #1)
> Yeah, when the screens aren't exactly touching in the config UI, you can't
> move your cursor between them. I don't think this is a good design; a gap
> between screens shouldn't prevent any screens from being inaccessible with
> the cursor.

There's a problem - how would you prevent the pointer going outside the screen into nothing? I think it's a kscreen bug, it should not allow applying output configurations with gaps between screens.
Comment 6 Nate Graham 2022-09-14 14:43:54 UTC
That's fair, we could do that too.
Comment 7 Nate Graham 2022-09-28 17:06:12 UTC
*** Bug 459745 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2022-11-08 18:57:12 UTC
*** Bug 392152 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2022-11-08 18:57:18 UTC
*** Bug 392153 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2022-11-08 19:10:11 UTC
*** Bug 422073 has been marked as a duplicate of this bug. ***
Comment 11 David Redondo 2022-11-21 09:51:12 UTC
Git commit f95cbe13d347f74a8b53f0ff2a6e28def8e8529f by David Redondo.
Committed on 21/11/2022 at 09:49.
Pushed by davidre into branch 'master'.

kcm: Do not allow configs with gaps between screens

That creates problems for users, things render into the
void or unable to move mouse cursor.
FIXED-IN:5.27

M  +18   -2    kcm/kcm.cpp
M  +7    -1    kcm/kcm.h
M  +7    -2    kcm/package/contents/ui/main.qml

https://invent.kde.org/plasma/kscreen/commit/f95cbe13d347f74a8b53f0ff2a6e28def8e8529f
Comment 12 David Redondo 2022-11-21 09:51:20 UTC
Git commit 69544dc72bc0bfa8ebb0b50c542eea1d763af7fd by David Redondo.
Committed on 21/11/2022 at 09:49.
Pushed by davidre into branch 'master'.

kcm: In the case of two outputs always snap them together

While being a harder problem in general, when there are
only two outputs we can make them always touch which is better
than showing a warning after the move.

M  +60   -5    kcm/output_model.cpp

https://invent.kde.org/plasma/kscreen/commit/69544dc72bc0bfa8ebb0b50c542eea1d763af7fd