kcm: Do not allow configs with gaps between screens

That creates problems for users, things render into the
void or unable to move mouse cursor.
BUG:453926
FIXED-IN:5.27